--- a/index.html
+++ b/index.html
@@ -2373,7 +2373,7 @@
         // --- Gallery Data with Color Palettes ---
         const galleryData = [
             { 
-                src: 'image/jahid.png', 
+                src: 'jahid.png', 
                 category: 'fashion', 
                 title: 'Vogue Sepia',
                 colors: ['#4a3b32', '#d4af37', '#1a1a1a', '#8c7b6e']
@@ -2391,13 +2391,13 @@
                 colors: ['#2f3e46', '#52796f', '#84a98c', '#cad2c5']
             },
             { 
-                src: 'image/jahid2.jpg', 
+                src: 'jahid2.jpg', 
                 category: 'fashion', 
                 title: 'Urban Chic',
                 colors: ['#3d405b', '#e07a5f', '#f2cc8f', '#81b29a']
             },
             { 
-                src: 'image/jahid3.jpg', 
+                src: 'jahid3.jpg', 
                 category: 'travel', 
                 title: 'Alpine Mist',
                 colors: ['#1d3557', '#457b9d', '#a8dadc', '#f1faee']
@@ -2699,4 +2699,5 @@
 
     </script>
 </body>
+
 </html>
