--- a/index.html
+++ b/index.html
@@ -969,7 +969,7 @@
                 <div class="col-span-1 text-right"><i class="ph ph-arrow-up-right"></i></div>
                 
                 <!-- Floating Thumbnail -->
-                <img src="image/jahid.png" class="list-thumb absolute left-1/2 top-1/2 w-64 h-40 object-cover z-20 border border-brand-gold">
+                <img src="jahid.png" class="list-thumb absolute left-1/2 top-1/2 w-64 h-40 object-cover z-20 border border-brand-gold">
             </div>
 
             <div class="list-row group relative border-b border-white/5 hover:border-brand-gold/50 transition-colors py-6 grid grid-cols-12 items-center text-sm text-gray-400 hover:text-white cursor-pointer" onclick="openLightbox(1)">
@@ -995,7 +995,7 @@
                 <div class="col-span-3 text-xs tracking-widest">FASHION</div>
                 <div class="col-span-2 text-xs tracking-widest">2024</div>
                 <div class="col-span-1 text-right"><i class="ph ph-arrow-up-right"></i></div>
-                <img src="image/jahid2.jpg" class="list-thumb absolute left-1/2 top-1/2 w-64 h-40 object-cover z-20 border border-brand-gold">
+                <img src="jahid2.jpg" class="list-thumb absolute left-1/2 top-1/2 w-64 h-40 object-cover z-20 border border-brand-gold">
             </div>
              <div class="list-row group relative border-b border-white/5 hover:border-brand-gold/50 transition-colors py-6 grid grid-cols-12 items-center text-sm text-gray-400 hover:text-white cursor-pointer" onclick="openLightbox(4)">
                 <div class="col-span-1 font-mono text-xs">05</div>
@@ -1003,7 +1003,7 @@
                 <div class="col-span-3 text-xs tracking-widest">TRAVEL</div>
                 <div class="col-span-2 text-xs tracking-widest">2022</div>
                 <div class="col-span-1 text-right"><i class="ph ph-arrow-up-right"></i></div>
-                <img src="image/jahid3.jpg" class="list-thumb absolute left-1/2 top-1/2 w-64 h-40 object-cover z-20 border border-brand-gold">
+                <img src="jahid3.jpg" class="list-thumb absolute left-1/2 top-1/2 w-64 h-40 object-cover z-20 border border-brand-gold">
             </div>
              <div class="list-row group relative border-b border-white/5 hover:border-brand-gold/50 transition-colors py-6 grid grid-cols-12 items-center text-sm text-gray-400 hover:text-white cursor-pointer" onclick="openLightbox(5)">
                 <div class="col-span-1 font-mono text-xs">06</div>
@@ -2701,3 +2701,4 @@
 </body>
 
 </html>
+
